# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  database.py  utils.py
page_analyzer/templates/: 404.html  505.html  base.html  index.html  show_url.html  urls.html
