[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["zcmn <zhecaman@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
