[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["zcmn <zhecaman@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
requests = "^2.31.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"


[tool.poetry.dev-dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
